feature/PRODPFIP-291 responsive footer (#162)
* responsive footer

* loginForm style fix

* position fix

* media query in header

* layout structure

* changes after review

* max width in footer top

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -151,6 +151,43 @@
       "loginButton": {
         "label": "Log In",
         "labelLogged": "Logout"
+      },
+      "footer": {
+        "headers": {
+          "categories": "Categories",
+          "aboutUs": "About us",
+          "exhibitor": "For exhibitors"
+        },
+        "categoryNames": {
+          "construction": "Construction",
+          "office": "Company and office",
+          "photography": "Photography",
+          "graphics": "Graphics",
+          "privateLessons": "Private lessons",
+          "bookkeeping": "Bookkeeping",
+          "marketing": "Marketing and advertising",
+          "repair": "Repair and service",
+          "garden": "Garden",
+          "housework": "Housework",
+          "law": "Law",
+          "programming": "Programming",
+          "translations": "Translations",
+          "transport": "Transport",
+          "workshop": "Workshop services",
+          "music": "Bands and music",
+          "other": "Other"
+        },
+        "aboutUs": {
+          "privacy": "Privacy policy",
+          "statute": "Statute",
+          "help": "Help",
+          "shopping": "Shopping on ShopMe",
+          "sale": "Sales on ShopMe"
+        },
+        "forExhibitors": {
+          "seller": "Become a seller",
+          "conditions": "Conditions"
+        }
       }
     }
   },
