--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -151,6 +151,43 @@
       "loginButton": {
         "label": "Logowanie",
         "labelLogged": "Wyloguj"
+      },
+      "footer": {
+        "headers": {
+          "categories": "Kategorie",
+          "aboutUs": "O nas",
+          "exhibitor": "Dla wystawców"
+        },
+        "categoryNames": {
+          "construction": "Budowa",
+          "office": "Firma i biuro",
+          "photography": "Fotografia",
+          "graphics": "Grafika",
+          "privateLessons": "Korepetycje",
+          "bookkeeping": "Księgowość",
+          "marketing": "Marketing i reklama",
+          "repair": "Naprawa i serwis",
+          "garden": "Ogród",
+          "housework": "Prace domowe",
+          "law": "Prawo",
+          "programming": "Programowanie",
+          "translations": "Tłumaczenia",
+          "transport": "Transport",
+          "workshop": "Usługi warsztatowe",
+          "music": "Zespoły i muzyka",
+          "other": "Inne"
+        },
+        "aboutUs": {
+          "privacy": "Polityka prywatności",
+          "statute": "Regulamin",
+          "help": "Pomoc",
+          "shopping": "Zakupy na ShopMe",
+          "sale": "Sprzedaż na ShopMe"
+        },
+        "forExhibitors": {
+          "seller": "Zostań sprzedawcą",
+          "conditions": "Warunki"
+        }
       }
     }
   },
