PRODPFIP-289 FE - RWD - Category list (#170)
* PRODPFIP-286 RWD Category List

* Change default input maxlength value

* Code fix

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -10,6 +10,12 @@
     "foundSearchResults": {
       "resultsTitle": "Search results"
     },
+    "categoryList":{
+      "title": "Discover offers. ",
+      "subtitle": "Depending on your needs.",
+      "seeMore": "more",
+      "seeLess": "less"
+    },
     "add": {
       "form": {
         "name": "Offer title *",
@@ -97,16 +103,16 @@
           "transport": "Transport",
           "photography": "Photography",
           "graphics": "Graphics",
-          "marketingAndAdvertising": "Marketing and Advertising",
+          "marketingAndAdvertising": "Marketing and\u00A0Advertising",
           "programming": "Programming",
           "bookkeeping": "Bookkeeping",
           "law": "Law",
           "translations": "Translations",
-          "companyAndOffice": "Company and Office",
-          "repairAndService": "Repair and Service",
+          "companyAndOffice": "Company and\u00A0Office",
+          "repairAndService": "Repair and\u00A0Service",
           "housework": "Housework",
           "tutoring": "Tutoring",
-          "bandsAndMusic": "Bands and Music",
+          "bandsAndMusic": "Bands and\u00A0Music",
           "others": "Others"
         }
       },
