--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -10,6 +10,12 @@
     "foundSearchResults": {
       "resultsTitle": "Wyniki wyszukiwania"
     },
+    "categoryList":{
+      "title": "Odkrywaj oferty. ",
+      "subtitle": "W zależności od potrzeb.",
+      "seeMore": "więcej",
+      "seeLess": "mniej"
+    },
     "add": {
       "form": {
         "name": "Tytuł Oferty *",
@@ -97,16 +103,16 @@
           "transport": "Transport",
           "photography": "Fotografia",
           "graphics": "Grafika",
-          "marketingAndAdvertising": "Marketing i Reklama",
+          "marketingAndAdvertising": "Marketing i\u00A0Reklama",
           "programming": "Programowanie",
           "bookkeeping": "Księgowość",
           "law": "Prawo",
           "translations": "Tłumaczenia",
-          "companyAndOffice": "Firma i Biuro",
-          "repairAndService": "Naprawa i Serwis",
+          "companyAndOffice": "Firma i\u00A0Biuro",
+          "repairAndService": "Naprawa i\u00A0Serwis",
           "housework": "Prace Domowe",
           "tutoring": "Korepetycje",
-          "bandsAndMusic": "Zespoły i Muzyka",
+          "bandsAndMusic": "Zespoły i\u00A0Muzyka",
           "others": "Inne"
         }
       },
