Feature/prodpfip 287 rwd header (#168)
* header for mobile

* header for tablet

* header for desktop

* deletion of useless components

* styles fix

* z index

* temporary margin in Search form

* positions fix

* deletion of margin in mobile

* changes after review

* padding instead of margin

* position absolute in Header

* changes after review

* logo resised

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -158,6 +158,10 @@
         "label": "Log In",
         "labelLogged": "Logout"
       },
+      "header": {
+        "add": "add offer",
+        "logout": "logout"
+      },
       "footer": {
         "headers": {
           "categories": "Categories",
