--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -158,6 +158,10 @@
         "label": "Logowanie",
         "labelLogged": "Wyloguj"
       },
+      "header": {
+        "add": "dodaj ofertę",
+        "logout": "wyloguj"
+      },
       "footer": {
         "headers": {
           "categories": "Kategorie",
