--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -114,7 +114,7 @@
           "housework": "Prace Domowe",
           "tutoring": "Korepetycje",
           "bandsAndMusic": "Zespoły i\u00A0Muzyka",
-          "others": "Inne"
+          "inne": "Inne"
         }
       },
       "voivodeship": {
@@ -169,25 +169,6 @@
           "categories": "Kategorie",
           "aboutUs": "O nas",
           "exhibitor": "Dla wystawców"
-        },
-        "categoryNames": {
-          "construction": "Budowa",
-          "office": "Firma i biuro",
-          "photography": "Fotografia",
-          "graphics": "Grafika",
-          "privateLessons": "Korepetycje",
-          "bookkeeping": "Księgowość",
-          "marketing": "Marketing i reklama",
-          "repair": "Naprawa i serwis",
-          "garden": "Ogród",
-          "housework": "Prace domowe",
-          "law": "Prawo",
-          "programming": "Programowanie",
-          "translations": "Tłumaczenia",
-          "transport": "Transport",
-          "workshop": "Usługi warsztatowe",
-          "music": "Zespoły i muzyka",
-          "other": "Inne"
         },
         "aboutUs": {
           "privacy": "Polityka prywatności",
