--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -45,10 +45,12 @@
     },
     "login": {
       "login": {
-        "emailInputLabel": "E-mail:",
-        "passwordInputLabel": "Hasło:",
-        "submitButtonLabel": "Zaloguj",
-        "formTitle": "Logowanie"
+        "emailInputLabel": "E-mail",
+        "passwordInputLabel": "Hasło",
+        "submitButtonLabel": "Zaloguj się",
+        "formTitle": "Logowanie",
+        "registerMessage": "Nie masz jeszcze konta?",
+        "registerLink": "Zarejestruj się"
       },
       "signup": {
         "firstNameInputLabel": "Imię:",
