feature/PRODPFIP-321 RWD SignUpForm (#198)
* RWD SignUpForm

* tests fix

* RWD RegisterForm

* typo fix

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -51,40 +51,42 @@
         "formTitle": "Login",
         "registerMessage": "You dont have an account yet?",
         "registerLink": "Register"
-      },
-      "signup": {
-        "firstNameInputLabel": "First Name:",
-        "lastNameInputLabel": "Last Name:",
-        "emailInputLabel": "E-mail:",
+      }
+    },
+    "signup": {
+        "firstNameInputLabel": "First Name",
+        "lastNameInputLabel": "Last Name",
+        "emailInputLabel": "E-mail",
         "submitButtonLabel": "Sign Up",
         "formTitle": "Registration",
-        "errorMessage": "* Please fill out required fields"
+        "errorMessage": "* Please fill out required fields",
+        "loginMessage": "Already have an account?",
+        "loginLink": "Log in"
       },
-      "register": {
-        "firstNameInputLabel": "First Name:",
-        "lastNameInputLabel": "Last Name:",
-        "emailInputLabel": "E-mail:",
-        "passwordInputLabel": "Password:",
-        "confirmPasswordInputLabel": "Confirm Password:",
-        "phoneNumberInputLabel": "Phone Number:",
-        "bankAccountInputLabel": "Bank Account Number:",
-        "streetInputLabel": "Street:",
-        "houseNumberInputLabel": "House Number:",
-        "cityInputLabel": "City:",
-        "localityInputLabel": "City:",
-        "zipCodeInputLabel": "Zip Code:",
-        "companyNameInputLabel": "Company Name:",
-        "nipInputLabel": "Taxpayer Identification Number:",
-        "submitButtonLabel": "Sign Up",
-        "formTitle": "Register",
-        "termsAndConditions": "I accept ",
-        "termsAndConditionsLink": "the terms and conditions",
-        "personalDataProcessing": "I hereby agree for processing my personal data by ShopMe",
-        "invoiceDataLabel": "Invoice data",
-        "successRegisterMessage": "Registration has been completed successfully",
-        "anEmailIsExisting": "The user with the entered e-mail address already exists",
-        "voivodeships": "Voivodeship:"
-      }
+    "register": {
+      "firstNameInputLabel": "First Name",
+      "lastNameInputLabel": "Last Name",
+      "emailInputLabel": "E-mail",
+      "passwordInputLabel": "Password",
+      "confirmPasswordInputLabel": "Confirm Password",
+      "phoneNumberInputLabel": "Phone Number",
+      "bankAccountInputLabel": "Bank Account Number",
+      "streetInputLabel": "Street",
+      "houseNumberInputLabel": "House Number",
+      "cityInputLabel": "City",
+      "localityInputLabel": "City",
+      "zipCodeInputLabel": "Zip Code",
+      "companyNameInputLabel": "Company Name",
+      "nipInputLabel": "Taxpayer Identification Number",
+      "voivodeships": "Voivodeship",
+      "submitButtonLabel": "Sign Up",
+      "formTitle": "Register",
+      "termsAndConditions": "I accept ",
+      "termsAndConditionsLink": "the terms and conditions",
+      "personalDataProcessing": "I hereby agree for processing my personal data by ShopMe",
+      "invoiceDataLabel": "Invoice data",
+      "successRegisterMessage": "Registration has been completed successfully",
+      "anEmailIsExisting": "The user with the entered e-mail address already exists"
     },
     "offerDetails": {
         "contact": "Contact",
