--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -51,41 +51,43 @@
         "formTitle": "Logowanie",
         "registerMessage": "Nie masz jeszcze konta?",
         "registerLink": "Zarejestruj się"
-      },
-      "signup": {
-        "firstNameInputLabel": "Imię:",
-        "lastNameInputLabel": "Nazwisko:",
-        "emailInputLabel": "E-mail:",
-        "submitButtonLabel": "Rejestruj",
-        "formTitle": "Rejestracja",
-        "errorMessage": "* Proszę uzupełnić wymagane pola"
-      },
-      "register": {
-        "firstNameInputLabel": "Imię:",
-        "lastNameInputLabel": "Nazwisko:",
-        "emailInputLabel": "E-mail:",
-        "passwordInputLabel": "Hasło:",
-        "confirmPasswordInputLabel": "Powtórz hasło:",
-        "phoneNumberInputLabel": "Numer telefonu:",
-        "bankAccountInputLabel": "Nr konta bankowego:",
-        "streetInputLabel": "Ulica:",
-        "houseNumberInputLabel": "Nr domu:",
-        "cityInputLabel": "Miasto:",
-        "localityInputLabel": "Miejscowość:",
-        "zipCodeInputLabel": "Kod pocztowy:",
-        "companyNameInputLabel": "Nazwa firmy:",
-        "nipInputLabel": "NIP:",
-        "submitButtonLabel": "Rejestruj",
-        "formTitle": "Rejestracja użytkownika",
-        "termsAndConditions": "Akceptuję ",
-        "termsAndConditionsLink": "regulamin",
-        "personalDataProcessing": "Wyrażam zgodę na przetwarzanie moich danych osobowych przez ShopMe",
-        "invoiceDataLabel": "Dane do faktury",
-        "successRegisterMessage": "Rejestracja zakończona pomyślnie",
-        "anEmailIsExisting": "Użytkownik o podanym adresie e-mail już istnieje",
-        "voivodeships": "Województwo:"
       }
     },
+  "register": {
+      "firstNameInputLabel": "Imię",
+      "lastNameInputLabel": "Nazwisko",
+      "emailInputLabel": "E-mail",
+      "passwordInputLabel": "Hasło",
+      "confirmPasswordInputLabel": "Powtórz hasło",
+      "phoneNumberInputLabel": "Numer telefonu",
+      "bankAccountInputLabel": "Nr konta bankowego",
+      "streetInputLabel": "Ulica",
+      "houseNumberInputLabel": "Nr domu",
+      "cityInputLabel": "Miasto",
+      "localityInputLabel": "Miejscowość",
+      "zipCodeInputLabel": "Kod pocztowy",
+      "companyNameInputLabel": "Nazwa firmy",
+      "nipInputLabel": "NIP",
+      "voivodeships": "Województwo",
+      "submitButtonLabel": "Rejestruj",
+      "formTitle": "Rejestracja",
+      "termsAndConditions": "Akceptuję ",
+      "termsAndConditionsLink": "regulamin",
+      "personalDataProcessing": "Wyrażam zgodę na przetwarzanie moich danych osobowych przez ShopMe",
+      "invoiceDataLabel": "Dane do faktury",
+      "successRegisterMessage": "Rejestracja zakończona pomyślnie",
+      "anEmailIsExisting": "Użytkownik o podanym adresie e-mail już istnieje"
+    },
+    "signup": {
+        "firstNameInputLabel": "Imię",
+        "lastNameInputLabel": "Nazwisko",
+        "emailInputLabel": "E-mail",
+        "submitButtonLabel": "Rejestruj",
+        "formTitle": "Rejestracja",
+        "errorMessage": "* Proszę uzupełnić wymagane pola",
+        "loginMessage": "Masz już konto?",
+        "loginLink": "Zaloguj się"
+      },
     "offerDetails": {
         "contact": "Kontakt",
         "show": "Pokaż",
@@ -102,7 +104,7 @@
         "categoryOptions": {
           "building": "Budowa",
           "garden": "Ogród",
-          "workshopServices": "Usługi Warszatatowe",
+          "workshopServices": "Usługi Warsztatowe",
           "transport": "Transport",
           "photography": "Fotografia",
           "graphics": "Grafika",
