--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -9,7 +9,12 @@
       "numberError": "Phrase can't contain only digits"
     },
     "foundSearchResults": {
-      "resultsTitle": "Search results"
+      "resultsTitle": "Search results",
+      "offerTitle": "Title",
+      "category": "Category",
+      "price": "Price",
+      "date": "Date",
+      "currency": "zł"
     },
     "categoryList":{
       "title": "Discover offers. ",
