--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -9,7 +9,12 @@
       "numberError": "Podaj frazę nieskładającą się z samych liczb"
     },
     "foundSearchResults": {
-      "resultsTitle": "Wyniki wyszukiwania"
+      "resultsTitle": "Wyniki wyszukiwania",
+      "offerTitle": "Tytuł oferty",
+      "category": "Kategoria",
+      "price": "Cena",
+      "date": "Data",
+      "currency": "zł"
     },
     "categoryList":{
       "title": "Odkrywaj oferty. ",
