feature/PRODPFIP-348 login implementation (#212)
* login implementation

* translations fix

* test refresh

* call method in Login screen

* tests refresh

* translation fix

* redirect fix

* response in state removed

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -52,14 +52,13 @@
       "noResultsTitle": "No results have been found match your criteria."
     },
     "login": {
-      "login": {
-        "emailInputLabel": "E-mail",
-        "passwordInputLabel": "Password",
-        "submitButtonLabel": "Log In",
-        "formTitle": "Login",
-        "registerMessage": "You dont have an account yet?",
-        "registerLink": "Register"
-      }
+      "emailInputLabel": "E-mail",
+      "passwordInputLabel": "Password",
+      "submitButtonLabel": "Log In",
+      "formTitle": "Login",
+      "registerMessage": "You dont have an account yet?",
+      "registerLink": "Register",
+      "errorMessage": "* Please fill all fields"
     },
     "signup": {
         "firstNameInputLabel": "First Name",
