--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -155,7 +155,8 @@
       },
       "priceInput": {
         "errorEmptyField": "This field is required",
-        "currency": "zł"
+        "currency": "zł",
+        "label": "Cena"
       },
       "offerTextarea": {
         "errorEmptyField": "This field is required"
