PRODPFIP-350 Strona widoku oferty zgodna z dostarczonymi ekranami (#221)
* Commit before rebase

* Modify CSS files for offer details to match UX design; Add missing translations

* Update some css files; Change translation key for showing personal data; Add missing icon for category 'others'

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -97,12 +97,13 @@
     },
     "offerDetails": {
         "contact": "Contact",
-        "show": "Show",
+        "showContactData": "Show contact data",
         "aboutMe": "About me",
         "baseOffer": "Base offer",
         "extendedOffer": "Extended offer",
         "extraOffer": "Extra offer",
-        "price": "price"
+        "price": "price",
+        "packages": "Offer packages"
       },
     "UI": {
       "categorySelect": {
