Forbidden Access view

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -48,6 +48,10 @@
     "errorMessage": {
       "text": "Something went wrong"
     },
+    "forbidden": {
+      "text": "You do not have permission to view this page.",
+      "link": "Sign In"
+    },
     "noSearchResults": {
       "noResultsTitle": "No results have been found match your criteria."
     },
