PRODPFIP-374 - Dostosowanie ekranu wyników wyszukiwania (#238)
* Add search results styles

* Improve styles of search results and pagination

* Fix test of Pagination after style changes

* Add condition of display price prefix

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -15,7 +15,9 @@
       "category": "Category",
       "price": "Price",
       "date": "Date",
-      "currency": "zł"
+      "currency": "zł",
+      "prefix": "from",
+      "moreOptions": "more packages available"
     },
     "categoryList":{
       "title": "Discover offers. ",
