enhancement/Forbidden Access view (#234)
* Forbidden Access view

* conflict resolved

* add test

* fix after rebase

* changes after review

* changes after review

--- a/public/locales/pl/translations.json
+++ b/public/locales/pl/translations.json
@@ -51,6 +51,10 @@
     "errorMessage": {
       "text": "Coś poszło nie tak"
     },
+    "forbidden": {
+      "text": "Nie masz uprawnień do przeglądania tej strony.",
+      "link": "Zaloguj się"
+    },
     "noSearchResults" : {
       "noResultsTitle": "Niestety nie znaleziono ofert spełniających Twoje kryteria"
     },
